fixed z-index of start-menu

--- a/src/styles/Taskbar.css
+++ b/src/styles/Taskbar.css
@@ -73,6 +73,7 @@
 
 /* Base Start Menu Container */
 .start-menu {
+	z-index: 1001;
 	position: fixed;
 	bottom: 33px; /* Sits above taskbar */
 	left: 0;
